--- a/chapter4_exercise.css
+++ b/chapter4_exercise.css
@@ -3,3 +3,47 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.header {
+  width: 100%;
+  height: 50px;
+  background-color: red;
+}
+
+.main-top {
+  width: 100%;
+  height: 500px;
+  background-color: orange;
+}
+
+.main {
+  width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.main-a {
+  width: 230px;
+  height: 1400px;
+  background-color: palegreen;
+}
+
+.main-b {
+  width: 230px;
+  height: 1400px;
+  background-color: limegreen;
+}
+
+.main-c {
+  width: 230px;
+  height: 1400px;
+  background-color: palegreen;
+}
+
+
+.footer {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+}
